tests/toy/neg/001522_mutation.toylang
program a = { var if : bool; } .
